--- a/notebooks/BC_capstone_data_wrangling.ipynb
+++ b/notebooks/BC_capstone_data_wrangling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "75182bd7",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e1cbc113",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b93b448b",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "4         4.104791  3.115741  malignant  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e5424cd1",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "[39366 rows x 11 columns]>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "17320bad",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4e2de3c9",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "31c40a75",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "max       13.160789        12.005376        10.700432     12.044924  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5b074a12",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b380fb77",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cb65ef14",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6668e7b2",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6dacfba1",
    "metadata": {},
    "outputs": [],
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "82dcb06a",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a752b31b",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7d3d3ed2",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "2671af98",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5bd39bf2",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
        "max       13.160789        12.005376        10.700432     12.044924  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e389cb96",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing file.  \"../data\\bc_data_cleaned.csv\"\n"
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)n\n",
+      "\n",
+      "Please re-run this cell with a new filename.\n"
      ]
     }
    ],
@@ -962,8 +966,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "11ae4492",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04056769336419361"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_max_outlier('Cell_Size_Uniformity')/39317"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cbc60c0",
    "metadata": {},
    "outputs": [],
    "source": []
