--- a/notebooks/BC_capstone_data_wrangling.ipynb
+++ b/notebooks/BC_capstone_data_wrangling.ipynb
@@ -60,7 +60,7 @@
     "The dataset is acquired from OpenML.org\n",
     "(https://www.openml.org/search?type=data&sort=runs&status=active&qualities.NumberOfInstances=between_10000_100000&id=251). \n",
     "\n",
-    "The dataset is comprised of the follwing fields:\n",
+    "The dataset is comprised of the following fields:\n",
     "\n",
     " - id - Patient ID\n",
     " - Clump_Thickness - Indicates grouping of cancer cells in multilayer (Values range from 1-10).\n",
@@ -260,6 +260,17 @@
    ],
    "source": [
     "bc_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a6c1294d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dataframe_image as dfi\n",
+    "dfi.export(bc_data.head(), 'table.png')"
    ]
   },
   {
